--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=0.45"/>
-  <title>末日控制中心 - 正式版v.1.065 altyn update</title>
+  <title>末日控制中心 - 正式版v.1.066 t-80 update</title>
   <style>
     /* 彈窗系統 */
     .modal-overlay {
