--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=0.45"/>
-  <title>末日控制中心 - 正式版v.1.069 T-80 update</title>
+  <title>末日控制中心 - 正式版v.1.070 btr-anim update</title>
   <style>
     /* 彈窗系統 */
     .modal-overlay {
@@ -1003,7 +1003,7 @@
 	  background-size: var(--btr-sprite-total-width) var(--btr-frame-height); /* 960px x 120px */
 	  background-repeat: no-repeat;   /* 不重複 */
 	  /* 精靈圖幀動畫，每1秒循環一次，共4帧 */
-	  animation: btrFrame 1s steps(4) infinite;
+	  animation: btrFrame 0.5s steps(4) infinite;
 	}
 
 	/* 移動動畫：使用百分比，相對於父容器寬度 */
