--- a/index.html
+++ b/index.html
@@ -4998,15 +4998,38 @@ function triggerT80Cannon() {
 	  logContent.scrollTop = logContent.scrollHeight;
 	}
 
-
 	
-	// 假設這是進入房間的流程（非 joinBattleRoom 部分）：
+	// 當頁面加載完成後，初始化使用者 UID（直接使用暱稱）
+	function initializeUser() {
+	  let nickname = document.getElementById("battleNickname").value.trim();
+	  if (!nickname) {
+		nickname = "userPlaceholder";
+	  }
+	  window.currentUid = nickname;
+	  console.log("使用者 UID 已設置為：", window.currentUid);
+	}
+
+	// 建議在用戶點擊「進入房間」之前先呼叫 initializeUser()
+	// 例如：
+	// document.getElementById("enterRoomBtn").addEventListener("click", function() {
+	//   initializeUser();
+	//   startBattleModeFirebase();
+	// });
+
 	function startBattleModeFirebase() {
 	  let pin = document.getElementById("battlePin").value.trim();
 	  if (pin === "") {
 		alert("請輸入有效的 PIN 碼");
 		return;
 	  }
+	  
+	  // 使用暱稱作為 uid
+	  let currentUid = document.getElementById("battleNickname").value.trim();
+	  if (!currentUid) {
+		alert("請先輸入有效的暱稱");
+		return;
+	  }
+	  console.log("當前使用者 UID:", currentUid);
 	  
 	  if (pin === "000") {
 		// 本地模擬模式
@@ -5020,9 +5043,7 @@ function triggerT80Cannon() {
 	  }
 	  
 	  let battleRoomRef = firebase.database().ref("battles").child(pin);
-	  let currentUid = firebase.auth().currentUser ? firebase.auth().currentUser.uid : "userPlaceholder";
-
-	  // 使用 once("value") 檢查該房間的存在情況
+	  // 檢查該房間是否存在
 	  battleRoomRef.once("value").then(function(snapshot) {
 		let battleData = snapshot.val();
 		if (battleData === null) {
@@ -5037,7 +5058,7 @@ function triggerT80Cannon() {
 		  // 當前設備已經是 userA
 		  joinBattleRoom(pin, "userA");
 		} else if (!battleData.userB) {
-		  // 房間存在但沒有 userB，加入成爲 userB
+		  // 房間存在但沒有 userB → 加入成為 userB
 		  battleRoomRef.child("userB").set({ uid: currentUid }).then(function() {
 			joinBattleRoom(pin, "userB");
 		  });
@@ -5049,7 +5070,6 @@ function triggerT80Cannon() {
 		}
 	  });
 	}
-
 
 	function joinBattleRoom(battleId, role) {
 	  console.log("加入戰局房間", battleId, "身份為", role);
@@ -5096,6 +5116,7 @@ function triggerT80Cannon() {
 	}
 
 
+
 	function pushBattleLog(message) {
 	  if (window.currentBattleRoom) {
 		let logRef = firebase.database().ref("battles")
@@ -5107,6 +5128,7 @@ function triggerT80Cannon() {
 
 	// 修改“開始對戰”按鈕事件，令其調用 Firebase 對戰流程
 	document.getElementById("battleStartBtn").addEventListener("click", function(){
+	  initializeUser();
 	  startBattleModeFirebase();
 	});
 
