--- a/index.html
+++ b/index.html
@@ -5024,11 +5024,7 @@ function triggerT80Cannon() {
 		alert("請先輸入有效的暱稱");
 		return;
 	  }
-	  let currentStyle = "";
-	  if (document.getElementById("battleStyle")) {
-		currentStyle = document.getElementById("battleStyle").value.trim();
-	  }
-	  console.log("當前使用者 UID:", currentUid, "款式:", currentStyle);
+	  console.log("當前使用者 UID:", currentUid);
 	  
 	  if (pin === "000") {
 		// 本地模擬模式
@@ -5042,26 +5038,27 @@ function triggerT80Cannon() {
 	  }
 	  
 	 let battleRoomRef = firebase.database().ref("battles").child(pin);
-  
-	  // 檢查房間是否存在
+	  // 使用 once("value") 檢查房間是否存在
 	  battleRoomRef.once("value").then(function(snapshot) {
 		let battleData = snapshot.val();
 		if (battleData === null) {
-		  // 房間不存在 → 設置 userA，同時寫入當前款式
+		  // 房間不存在 → 設置 userA
 		  battleRoomRef.set({
-			userA: { uid: currentUid, style: currentStyle },
+			userA: { uid: currentUid },
 			log: {}
 		  }).then(function() {
 			joinBattleRoom(pin, "userA");
 		  });
 		} else if (battleData.userA && battleData.userA.uid === currentUid) {
+		  // 當前設備已經是 userA
 		  joinBattleRoom(pin, "userA");
 		} else if (!battleData.userB) {
-		  // 房間存在但沒有 userB → 加入成為 userB，同時寫入當前款式
-		  battleRoomRef.child("userB").set({ uid: currentUid, style: currentStyle }).then(function() {
+		  // 房間存在但沒有 userB → 加入成為 userB
+		  battleRoomRef.child("userB").set({ uid: currentUid }).then(function() {
 			joinBattleRoom(pin, "userB");
 		  });
 		} else if (battleData.userB && battleData.userB.uid === currentUid) {
+		  // 當前設備已經是 userB
 		  joinBattleRoom(pin, "userB");
 		} else {
 		  alert("此戰局已滿！");
@@ -5069,15 +5066,19 @@ function triggerT80Cannon() {
 	  });
 	}
 
+
 	function joinBattleRoom(battleId, role) {
 	  console.log("加入戰局房間", battleId, "身份為", role);
 	  window.currentBattleRoom = battleId;
+	  // 將本設備的角色設置為 role（"userA" 或 "userB"）
 	  window.myRole = role;
+	  // 根據本設備角色，自動算出對手角色：如果我是 userA，則對手為 userB；反之亦然
 	  window.enemyRole = (role === "userA") ? "userB" : "userA";
 	  
+	  // 建立房間參考
 	  let roomRef = firebase.database().ref("battles").child(battleId);
 	  
-	  // 持續監聽房間狀態，並根據對手資料更新右側動畫窗口
+	  // 清除並持續監聽房間狀態
 	  roomRef.off("value");
 	  roomRef.on("value", function(snapshot) {
 		let data = snapshot.val();
@@ -5090,9 +5091,9 @@ function triggerT80Cannon() {
 			if (battleSpecialTimer) clearInterval(battleSpecialTimer);
 			battleSpecialTimer = setInterval(checkBattleBTREvent, 30000);
 		  }
-		  // 若對手存在且帶有款式資訊，更新右側動畫窗口
-		  if (data[window.enemyRole] && data[window.enemyRole].style) {
-			updateEnemyAnimation(data[window.enemyRole].style);
+		  // 更新右側動畫窗口，顯示對手的暱稱
+		  if (data[window.enemyRole] && data[window.enemyRole].uid) {
+			updateEnemyAnimation(data[window.enemyRole].uid);
 		  }
 		} else {
 		  if (battleMatched) {
@@ -5102,7 +5103,6 @@ function triggerT80Cannon() {
 		}
 	  });
 	  
-	 // 監聽房間中 "log" 子節點的新日誌
 	  let logRef = roomRef.child("log");
 	  logRef.off("child_added");
 	  logRef.on("child_added", function(snapshot) {
@@ -5110,8 +5110,6 @@ function triggerT80Cannon() {
 		if (data && data.sender && data.message) {
 		  let side = (data.sender === window.myUid) ? "self" : "enemy";
 		  appendBattleLogEntry(side, data.message);
-		  
-		  // 若對手觸發了事件並發送特定訊息，播放對手動畫
 		  if (side === "enemy") {
 			if (data.message.indexOf("T-80") !== -1) {
 			  playEnemyAnimation("T-80", data.message);
@@ -5127,54 +5125,13 @@ function triggerT80Cannon() {
 
 
 
-	function pushBattleLog(sender, message) {
-	  let logRef = firebase.database().ref("battles").child(window.currentBattleRoom).child("log");
-	  let senderValue = (sender === "system") ? "system" : document.getElementById("battleNickname").value.trim();
-	  logRef.push({ sender: senderValue, message: message });
-	}
-
-	// 根據對手款式來更新右側動畫窗口，顯示對應的 zombie_search 精靈圖
-	function updateEnemyAnimation(enemyStyle) {
-	  let enemyAnimContainer = document.getElementById("battleEnemyAnim");
-	  if (!enemyAnimContainer) return;
-	  
-	  let spriteImage;
-	  if (enemyStyle === "T-80") {
-		spriteImage = "images/zombie_search_t80.png";
-	  } else if (enemyStyle === "BTR") {
-		spriteImage = "images/zombie_search_btr.png";
-	  } else {
-		spriteImage = "images/zombie_search_default.png";
+	function pushBattleLog(message) {
+	  if (window.currentBattleRoom) {
+		let logRef = firebase.database().ref("battles")
+						  .child(window.currentBattleRoom)
+						  .child("log");
+		logRef.push(message);
 	  }
-	  
-	  enemyAnimContainer.innerHTML = `<img src="${spriteImage}" alt="對手僵尸" style="max-width:100%;">`;
-	}
-	// 播放對手動畫效果，根據事件類型選擇對應動畫
-	function playEnemyAnimation(eventType, message) {
-	  let enemyAnimContainer = document.getElementById("battleEnemyAnim");
-	  if (!enemyAnimContainer) return;
-	  
-	  enemyAnimContainer.innerHTML = "";
-	  let animElem = document.createElement("div");
-	  
-	  if (eventType === "T-80") {
-		animElem.className = "enemy-animation t80-animation";
-	  } else if (eventType === "BTR") {
-		animElem.className = "enemy-animation btr-animation";
-	  }
-	  
-	  animElem.textContent = message;
-	  enemyAnimContainer.appendChild(animElem);
-	  
-	  setTimeout(function() {
-		// 重新更新為靜態精靈圖
-		let roomRef = firebase.database().ref("battles").child(window.currentBattleRoom);
-		roomRef.once("value").then(function(snapshot) {
-		  let data = snapshot.val();
-		  let enemyStyle = (data && data[window.enemyRole] && data[window.enemyRole].style) ? data[window.enemyRole].style : "";
-		  updateEnemyAnimation(enemyStyle);
-		});
-	  }, 3000);
 	}
 
 	// 修改“開始對戰”按鈕事件，令其調用 Firebase 對戰流程
